crudkit-id/crates/derive-crudkit-id/tests/13-error-unknown-type.rs
#![allow(dead_code)]

use derive_crudkit_id::CkId;

#[derive(CkId)]
pub struct Foo {
    #[ck_id(id)]
    id: Vec<String>,
}

fn main() {}
